--- a/.eslintrc
+++ b/.eslintrc
@@ -1,21 +1,10 @@
 {
-    "extends": ["@vanillaforums/eslint-config", "eslint:recommended", "prettier"],
-    "plugins": ["prettier"],
-    "parser": "@babel/eslint-parser",
-    "parserOptions": {
-      "ecmaVersion": 8,
-      "requireConfigFile": false
-    },
-    "rules": {
-      "prettier/prettier": ["error", {
-        "endOfLine": "lf"
-      }],
-      "func-names": "off",
-      "camelcase": ["error", {
-        "ignoreDestructuring": true,
-        "ignoreImports": true
-      }],
-      "consistent-return": "off"
-    }
+  "extends": ["react-app", "eslint:recommended", "prettier"],
+  "plugins": ["prettier"],
+  "rules": {
+    "react-hooks/exhaustive-deps": "off",
+    "prettier/prettier": ["error", {
+      "endOfLine":"lf"
+    }]
   }
-  
+}
